new endpoint for rechecking domain
